--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   <body>
     <h1><%= locals.title %></h1>
     <main>
+      <a href="/new">Add Message</a>
       <% for (const message of locals.messages) { %>
       <div>
         <p><%= message.user %></p>
