--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,21 +1,24 @@
 <html>
   <head>
-    <title>New Message Form</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <title>New Message Form | New Message Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/form.css" />
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
+    <h1>Mini Messageboard</h1>
     <main>
+      <a href="./">Go Back</a>
       <form method="POST" action="/new">
-        <h1>Add your Message</h1>
-        <label>
-          <input type="text" name="authorName" placeholder="John Doe" />
-        </label>
-        <label>
-          <textarea
-            name="authorMessage"
-            placeholder="Your message to the world..."
-          ></textarea>
-        </label>
+        <label> Name: </label>
+        <input type="text" name="authorName" placeholder="John Doe" required />
+        <label> Message: </label>
+        <textarea
+          name="authorMessage"
+          placeholder="Your message to the world..."
+          required
+        ></textarea>
         <button type="submit">Send</button>
       </form>
     </main>
