--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,24 @@
 <html>
   <head>
     <title><%= locals.title %></title>
-    <link rel="stylesheet" href="/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
     <h1><%= locals.title %></h1>
     <main>
-      <a href="/new">Add Message</a>
-      <% for (const message of locals.messages) { %>
-      <div>
-        <p><%= message.user %></p>
-        <span><%= message.added %></span>
-        <p><%= message.text %></p>
-      </div>
-      <% } %>
+      <a href="/new">Add Your Message</a>
+      <section>
+        <% for (const message of locals.messages) { %>
+        <div>
+          <p class="user"><%= message.user %></p>
+          <p class="date"><%= message.added %></p>
+          <p class="message"><%= message.text %></p>
+        </div>
+        <% } %>
+      </section>
     </main>
   </body>
 </html>
