--- a/public/base.css
+++ b/public/base.css
@@ -24,3 +24,14 @@ main {
   padding: 1.5rem 2rem;
   border-radius: 0.25rem;
 }
+
+a {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #3b82f6;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
