--- a/public/base.css
+++ b/public/base.css
@@ -1,6 +1,8 @@
 :root {
   font-family: Inter, sans-serif;
-  font-feature-settings: "liga" 1, "calt" 1; /* fix for Chrome */
+  font-feature-settings:
+    "liga" 1,
+    "calt" 1; /* fix for Chrome */
 }
 
 @supports (font-variation-settings: normal) {
